--- a/_8_QRCodeGenerator/index.html
+++ b/_8_QRCodeGenerator/index.html
@@ -9,8 +9,13 @@
   <body>
     <div class="container">
       <p>Enter your text or URL</p>
-      <input type="text" placeholder="Text or URL" />
-      <button>Generate QR Code</button>
+      <input type="text" placeholder="Text or URL" id="qrText" />
+
+      <div id="imgBox">
+        <img src="" id="qrImage" />
+      </div>
+
+      <button onclick="generateQR()">Generate QR Code</button>
     </div>
 
     <script src="script.js"></script>
