27th project edited with neo inr value

--- a/_27_CryptoCurrencyWebsite/index.html
+++ b/_27_CryptoCurrencyWebsite/index.html
@@ -40,30 +40,38 @@
       </div>
       <div class="coin-list">
         <div class="coin">
-          <img src="bitcoinImage-src-add-later" alt="bitcoin-img" />
+          <img
+            src="https://cdn.pixabay.com/photo/2021/04/30/16/47/bitcoin-logo-6219385_1280.png"
+          />
           <div>
             <h3>₹ <span id="bitcoin"></span></h3>
             <p>Bitcoin</p>
           </div>
         </div>
         <div class="coin">
-          <img src="-Ethereum-Image-src-add-later" alt="ethereum-img" />
+          <img
+            src="https://cdn.pixabay.com/photo/2021/05/24/09/15/ethereum-6278326_1280.png"
+          />
           <div>
             <h3>₹<span id="ethereum"></span></h3>
             <p>Ethereum</p>
           </div>
         </div>
         <div class="coin">
-          <img src="lite-coinImage-src-add-later" alt="Lite-img" />
+          <img
+            src="https://img.freepik.com/free-vector/litecoin-blockchain-cryptocurrency-logo-vector-open-source-finance-concept_53876-126024.jpg?w=2000"
+          />
           <div>
             <h3>₹<span id="litecoin"></span></h3>
             <p>Lite-coin</p>
           </div>
         </div>
         <div class="coin">
-          <img src="Neo-coinImage-src-add-later" alt="neo-img" />
+          <img
+            src="https://w7.pngwing.com/pngs/629/719/png-transparent-neo-crypto-cryptocurrency-cryptocurrencies-cash-money-bank-payment-icon.png"
+          />
           <div>
-            <h3>₹<span id="neocoin"></span></h3>
+            <h3>₹<span id="neo"></span></h3>
             <p>Neo</p>
           </div>
         </div>
